RESOLVED FIXED137681
Web Inspector: Processing Instruction Nodes appear poorly in DOM Tree
https://bugs.webkit.org/show_bug.cgi?id=137681
Summary Web Inspector: Processing Instruction Nodes appear poorly in DOM Tree
Joseph Pecoraro
Reported 2014-10-13 18:51:22 PDT
* SUMMARY Web Inspector: Processing Instruction Nodes appear poorly in DOM Tree. We only see their node name. Not their data (attributes). * STEPS TO REPRODUCE 1. Inspect <http://www.schillmania.com/content/entries/2004/10/24/application-xhtml+xml/> 2. View DOM Tree => processing instruction nodes display poorly and unstyled * NOTES The content is served with a "application/xhtml+xml" mime type and looks like: <?xml version="1.0" encoding="UTF-8"?> <?xml-stylesheet type="text/css" href="/2009/2009.css" title="main" media="screen"?> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"> .... NOTE: We don't even show the <?xml?> processing instruction in the UI. We probably should.
Attachments
[PATCH] Proposed Fix (8.59 KB, patch)
2014-10-13 18:55 PDT, Joseph Pecoraro
timothy: review+
[IMAGE] Before (24.93 KB, image/png)
2014-10-13 18:59 PDT, Joseph Pecoraro
no flags
[IMAGE] After (30.71 KB, image/png)
2014-10-13 19:00 PDT, Joseph Pecoraro
no flags
[PATCH] Comments Addressed (8.53 KB, patch)
2014-10-14 10:43 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-10-13 18:51:34 PDT
Joseph Pecoraro
Comment 2 2014-10-13 18:55:55 PDT
Created attachment 239769 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 3 2014-10-13 18:59:49 PDT
Created attachment 239771 [details] [IMAGE] Before
Joseph Pecoraro
Comment 4 2014-10-13 19:00:22 PDT
Created attachment 239772 [details] [IMAGE] After
Timothy Hatcher
Comment 5 2014-10-13 21:03:59 PDT
Comment on attachment 239769 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=239769&action=review > Source/WebInspectorUI/UserInterface/Models/DOMSearchMatchObject.js:117 > + for (var i = 0; i < attributes.length; ++i) { for of?
Joseph Pecoraro
Comment 6 2014-10-14 10:43:13 PDT
Created attachment 239806 [details] [PATCH] Comments Addressed
WebKit Commit Bot
Comment 7 2014-10-14 10:53:35 PDT
Comment on attachment 239806 [details] [PATCH] Comments Addressed Clearing flags on attachment: 239806 Committed r174687: <http://trac.webkit.org/changeset/174687>
WebKit Commit Bot
Comment 8 2014-10-14 10:53:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.