Web Inspector: Processing Instruction Nodes appear poorly in DOM Tree https://bugs.webkit.org/show_bug.cgi?id=137681

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-10-14
Reviewed by Timothy Hatcher.

Source/WebCore:

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::buildObjectForNode):
Include the nodeName, localName, and nodeValue (string data)
properties for processing instruction nodes.

Source/WebInspectorUI:

Handle processing instruction node types in more places. The
backend sends the contents as a pure string, not as attribute
pairs, so just include the string in the UI.

* UserInterface/Models/DOMSearchMatchObject.js:
(WebInspector.DOMSearchMatchObject.prototype._generateClassName):
(WebInspector.DOMSearchMatchObject.titleForDOMNode):
* UserInterface/Views/DOMTreeElement.js:
(WebInspector.DOMTreeElement.prototype._nodeTitleInfo):
Display the value in the UI.

* UserInterface/Views/DOMTreeElementPathComponent.js:
(WebInspector.DOMTreeElementPathComponent):
Include an icon like DOCTYPE.

* UserInterface/Views/SyntaxHighlightingDefaultTheme.css:
(.syntax-highlighted .html-processing-instruction):
Style gray like a DOCTYPE.

Canonical link: https://commits.webkit.org/155548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174687 268f45cc-cd09-0410-ab3c-d52691b4dbfc