Source/WebInspectorUI/UserInterface/Views/DOMTreeElementPathComponent.js
@@ -62,12 +62,19 @@ WebInspector.DOMTreeElementPathComponent = function(domTreeElement, representedO
 
     case Node.DOCUMENT_FRAGMENT_NODE:
         // FIXME: At some point we might want a different icon for this.
-        // <rdar://problem/12800950> Need icon for DOCUMENT_FRAGMENT_NODE
+        // <rdar://problem/12800950> Need icon for DOCUMENT_FRAGMENT_NODE and PROCESSING_INSTRUCTION_NODE
         className = WebInspector.DOMTreeElementPathComponent.DOMDocumentTypeIconStyleClassName;
         if (node.isInShadowTree())
             title = WebInspector.UIString("Shadow Content");
         else
             title = WebInspector.displayNameForNode(node);
+        break;
+
+    case Node.PROCESSING_INSTRUCTION_NODE:
+        // FIXME: At some point we might want a different icon for this.
+        // <rdar://problem/12800950> Need icon for DOCUMENT_FRAGMENT_NODE and PROCESSING_INSTRUCTION_NODE.
+        className = WebInspector.DOMTreeElementPathComponent.DOMDocumentTypeIconStyleClassName;
+        title = node.nodeNameInCorrectCase();
         break;
 
     default:
